Fix double border on the member list

--- a/src/modules/main/members/_members.scss
+++ b/src/modules/main/members/_members.scss
@@ -5,7 +5,6 @@
 
 .theme-dark .container-2o3qEW{
     background-color: $LayerFillColorDefault;
-    border-left: 1px solid $CardStrokeColorDefault;
 
     .members-3WRCEx,
     .members-3WRCEx > div{
